--- a/FilterWithMVEL/pom.xml
+++ b/FilterWithMVEL/pom.xml
@@ -23,12 +23,16 @@
       </dependency>
 
       <dependency>
+          <groupId>com.sree.textbytes</groupId>
+          <artifactId>jtopia</artifactId>
+          <version>0.0.3</version>
+      </dependency>
+
+      <dependency>
           <groupId>org.apache.kafka</groupId>
           <artifactId>kafka-clients</artifactId>
           <version>0.10.0.0</version>
       </dependency>
-
-
 
       <dependency>
           <groupId>junit</groupId>
@@ -38,4 +42,27 @@
       </dependency>
 
   </dependencies>
+
+    <build>
+        <plugins>
+            <!-- any other plugins -->
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
