--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,19 @@
 
     <name>DemoFilterWithMVEL</name>
     <url>http://maven.apache.org</url>
+
   <dependencies>
+
+      <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+      <dependency>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <version>1.2.17</version>
+      </dependency>
+
+
+
+
   </dependencies>
 
 </project>
